restructure responsiveness; fix tablet spacing; started desktop resp.

--- a/sass/designSystem.scss
+++ b/sass/designSystem.scss
@@ -20,7 +20,7 @@
   }
 }
 @mixin desktop-breakpoint {
-  @media only screen and (min-width: 801px) {
+  @media only screen and (min-width: 820px) {
     @content;
   }
 }
