--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,41 @@
+/*
+ * For all classes, mobile breakpoint styling is listed first
+ */
+
 @import "./designSystem.scss";
+
+/*
+ * Widths for sections and footer of breakpoint; not settings these by page 'cause mobile is
+ * different, of course
+ */
+$max-width-mobile: 90%;
+$max-width-tablet: 90%;
+$max-width-desktop: 80%;
+
+.section-1 {
+  width: $max-width-mobile;
+  margin: auto;
+
+  @include tablet-breakpoint {
+    width: $max-width-tablet;
+  }
+
+  @include desktop-breakpoint {
+    width: $max-width-desktop;
+  }
+}
+
+// make the above a mixin?
 
 .background-img {
   // all
   background-repeat: no-repeat;
-
-  // mobile
   background-image: url("./assets/bg-main-mobile.png");
-  background-position: 0 -275px;
+  background-position: 0 -17.2rem;
 
   @include tablet-breakpoint {
     background-image: url("./assets/bg-main-tablet.png");
-    background-position: -375px -225px;
+    background-position: -25rem -14rem;
   }
 
   @include desktop-breakpoint {
@@ -20,51 +45,36 @@
 }
 
 .background-pattern-1 {
-  // all breakpoints
   background-repeat: no-repeat;
   // NOTE: do not display this background on mobile!
 
   @include tablet-breakpoint {
     background-image: url("./assets/bg-pattern-1.svg");
-    background-position: 32rem -2rem;
+    background-position: 36rem -2rem;
+    background-size: 16rem auto;
   }
 
   @include desktop-breakpoint {
     background-position: right -2rem;
+    background-size: 18rem auto;
   }
 }
 
 .logo {
-  // all breakpoints
   height: 2rem;
-
-  // mobile
   margin: 2rem 0 4rem 1rem;
 
   @include tablet-breakpoint {
-    margin: 2.5rem 0 6rem 2.5rem;
+    margin: 2.5rem 0 6rem 0;
   }
 
   @include desktop-breakpoint {
-    margin: 4rem 0 8rem 10.3rem;
+    margin: 4rem 0 8rem 0;
   }
 }
 
 .heading-matter {
-  // responsive width taking into account 1rem l&r margin
-  width: calc(100% - 2rem);
-  height: 20rem;
-  margin: 0 1rem 6rem 1rem;
-
-  @include tablet-breakpoint {
-    width: calc(60% - 2rem);
-    margin-left: 2.5rem;
-  }
-
-  @include desktop-breakpoint {
-    width: calc(60% - 20.6rem);
-    margin-left: 10.3rem;
-  }
+  margin-bottom: 6rem;
 }
 
 .heading-1 {
@@ -74,17 +84,18 @@
   margin-bottom: 1rem;
 
   @include tablet-breakpoint {
-    max-width: 14ch;
+    width: 28rem;
+    font-size: 64px;
+    line-height: 64px;
+    letter-spacing: -0.73px;
   }
 
-  /*
-   * @include desktop-breakpoint {
-   *   width: 1015px;
-   *   height: 176px;
-   *   left: 165px;
-   *   top: 221px;
-   * }
-   */
+  @include desktop-breakpoint {
+    width: 55rem;
+    font-size: 88px;
+    line-height: 88px;
+    letter-spacing: -1px;
+  }
 }
 
 .copy-1 {
@@ -95,33 +106,30 @@
   @include tablet-breakpoint {
     font-size: 18px;
     line-height: 28px;
+    width: 32rem;
   }
 
-  /*
-   * @include desktop-breakpoint {
-   *   width: 825px;
-   *   height: 102px;
-   *   left: 164.5px;
-   *   top: 437px;
-   * }
-   */
+  @include desktop-breakpoint {
+    width: 53rem;
+    font-size: 20px;
+    line-height: 34px;
+  }
 }
 
 .product-container {
   // modbile
   height: 64rem;
-  max-width: 100%;
+  width: 100%;
 
   @include tablet-breakpoint {
     height: 52rem;
-    margin-bottom: 2rem;
+    margin: 2rem auto;
+    width: $max-width-tablet;
   }
 
-  /*
-   * @include desktop-breakpoint {
-   *   height: 600px;
-   * }
-   */
+  @include desktop-breakpoint {
+    width: $max-width-desktop;
+  }
 }
 
 .screenshot {
@@ -134,12 +142,12 @@
 
   @include tablet-breakpoint {
     width: 16.5rem;
-    margin-left: 6rem;
+    margin-left: 4rem;
   }
 
   @include desktop-breakpoint {
     width: 19.5rem;
-    margin-left: 17.7rem;
+    margin-left: 6rem;
   }
 }
 
@@ -152,32 +160,28 @@
   border-radius: 12px;
 
   @include tablet-breakpoint {
-    width: calc(100% - 5rem);
     margin: auto;
     top: -26rem;
-  }
-
-  @include desktop-breakpoint {
-    width: calc(100% - 20.6rem);
   }
 }
 
 .middle-background-img {
   width: 70%;
   display: block;
-  // note: setting margin here make the top and left setting relative to this given margin
   margin: 0 auto;
 
   @include tablet-breakpoint {
+    // reset margin for responsiveness
+    margin: 0;
     width: 17.5rem;
     position: relative;
     top: -2rem;
-    left: 1rem;
+    left: 14rem;
   }
 
   @include desktop-breakpoint {
     width: 19.5rem;
-    left: -2.75rem;
+    left: 20rem;
   }
 }
 
@@ -193,33 +197,37 @@
   @include tablet-breakpoint {
     width: 25rem;
     top: -54rem;
-    left: 17rem;
+    left: 15rem;
   }
 
   @include desktop-breakpoint {
     width: 27.9rem;
-    left: 47rem;
+    left: 35rem;
+    top: -56rem;
   }
 }
 
 .action-copy-container {
-  max-height: 100%;
-  margin: 0 2rem;
   display: inline-block;
+  margin: 0 2rem;
 }
 
 .action-heading {
   margin: 3rem 0 1rem 0;
+
+  @include tablet-breakpoint {
+    font-size: 40px;
+    line-height: 52px;
+  }
 }
 
 .action-copy {
   margin-bottom: 2rem;
 
-  @include desktop-breakpoint {
+  @include tablet-breakpoint {
     font-size: 20px;
     line-height: 34px;
   }
-
 }
 
 .pricing {
@@ -272,7 +280,7 @@
   color: inherit;
   font-weight: bold;
   font-size: 18px;
-  line-height: 32px;
+  line-height: 64px;
   letter-spacing: -0.18px;
   margin-left: 0.5rem;
 }
@@ -290,10 +298,6 @@
 
 footer {
   margin: 0 1rem;
-
-  @include tablet-breakpoint {
-    margin: 0 2.5rem;
-  }
 }
 
 .logo-bottom {
@@ -326,10 +330,6 @@ footer {
   font-weight: bold;
   text-decoration: none;
   color: $blackish;
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 ul {
